{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 518,
  "lineage": "bf6575e0-89bb-388c-a7cf-8c316b02790a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "bos_nat_eip01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c98642a920b55d18",
            "arn": "arn:aws:ec2:us-east-1:460480222158:elastic-ip/eipalloc-0c98642a920b55d18",
            "association_id": "eipassoc-07f785faf76392e91",
            "domain": "vpc",
            "id": "eipalloc-0c98642a920b55d18",
            "network_border_group": "us-east-1",
            "network_interface": "eni-08a63f9f4f336ac6c",
            "private_dns": "ip-10-26-1-206.ec2.internal",
            "private_ip": "10.26.1.206",
            "public_dns": "ec2-54-156-97-80.compute-1.amazonaws.com",
            "public_ip": "54.156.97.80",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "bos-nat-eip01"
            },
            "tags_all": {
              "Name": "bos-nat-eip01"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bos_ec201",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-068c0051b15cdb816",
            "arn": "arn:aws:ec2:us-east-1:460480222158:instance/i-0cb487eac6b1da19a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "bos-instance-profile01",
            "id": "i-0cb487eac6b1da19a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-02666e2cf00edd276"
              }
            ],
            "primary_network_interface_id": "eni-02666e2cf00edd276",
            "private_dns": "ip-10-26-1-237.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.26.1.237",
            "public_dns": "ec2-44-192-4-241.compute-1.amazonaws.com",
            "public_ip": "44.192.4.241",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0da42653d87c75ea2",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c85a0a825cfcc834",
            "tags": {
              "Name": "bos-ec201"
            },
            "tags_all": {
              "Name": "bos-ec201"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d65a3013e76a91d2"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "460480222158",
            "id": "i-0cb487eac6b1da19a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.bos_instance_profile01",
            "aws_iam_role.bos_ec2_role01",
            "aws_security_group.bos_ec2_sg01",
            "aws_subnet.bos_public_subnets",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bos_ec201_private_bonus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-068c0051b15cdb816",
            "arn": "arn:aws:ec2:us-east-1:460480222158:instance/i-0fdd40442d7a14a98",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "bos-instance-profile01",
            "id": "i-0fdd40442d7a14a98",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0dcda781b9e37b9dc"
              }
            ],
            "primary_network_interface_id": "eni-0dcda781b9e37b9dc",
            "private_dns": "ip-10-26-101-184.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.26.101.184",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f4cd787af621b7ed",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03e1fadc0b711957a",
            "tags": {
              "Name": "bos-ec201-private"
            },
            "tags_all": {
              "Name": "bos-ec201-private"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d65a3013e76a91d2"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "460480222158",
            "id": "i-0fdd40442d7a14a98",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.bos_instance_profile01",
            "aws_iam_role.bos_ec2_role01",
            "aws_security_group.bos_ec2_sg01",
            "aws_subnet.bos_private_subnets",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "bos_igw01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:460480222158:internet-gateway/igw-05ad035f02aa40c17",
            "id": "igw-05ad035f02aa40c17",
            "owner_id": "460480222158",
            "region": "us-east-1",
            "tags": {
              "Name": "bos-igw01"
            },
            "tags_all": {
              "Name": "bos-igw01"
            },
            "vpc_id": "vpc-0f4559f19f5d9e577"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "bos_alb01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:460480222158:loadbalancer/app/bos-alb01/b2d9cacc88700439",
            "arn_suffix": "app/bos-alb01/b2d9cacc88700439",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "bos-alb01-207011079.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:460480222158:loadbalancer/app/bos-alb01/b2d9cacc88700439",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "bos-alb01",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-08b0c802102379a49"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-050d58a4f5d869c4d"
              },
              {
                "subnet_id": "subnet-0c85a0a825cfcc834"
              }
            ],
            "subnets": [
              "subnet-050d58a4f5d869c4d",
              "subnet-0c85a0a825cfcc834"
            ],
            "tags": {
              "Name": "bos-alb01"
            },
            "tags_all": {
              "Name": "bos-alb01"
            },
            "vpc_id": "vpc-0f4559f19f5d9e577",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:460480222158:loadbalancer/app/bos-alb01/b2d9cacc88700439"
          },
          "dependencies": [
            "aws_security_group.bos_alb_sg01",
            "aws_subnet.bos_public_subnets",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "bos_http_listener01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:460480222158:listener/app/bos-alb01/b2d9cacc88700439/b780dd207ff3447c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:460480222158:listener/app/bos-alb01/b2d9cacc88700439/b780dd207ff3447c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:460480222158:loadbalancer/app/bos-alb01/b2d9cacc88700439",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:460480222158:listener/app/bos-alb01/b2d9cacc88700439/b780dd207ff3447c"
          },
          "dependencies": [
            "aws_lb.bos_alb01",
            "aws_security_group.bos_alb_sg01",
            "aws_subnet.bos_public_subnets",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "bos_tg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:460480222158:targetgroup/bos-tg01/1a6c04708aefa39f",
            "arn_suffix": "targetgroup/bos-tg01/1a6c04708aefa39f",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:460480222158:targetgroup/bos-tg01/1a6c04708aefa39f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "bos-tg01",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "bos-tg01"
            },
            "tags_all": {
              "Name": "bos-tg01"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f4559f19f5d9e577"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:460480222158:targetgroup/bos-tg01/1a6c04708aefa39f"
          },
          "dependencies": [
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "bos_tg_attach01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:460480222158:targetgroup/bos-tg01/1a6c04708aefa39f-20260113221135117100000010",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:460480222158:targetgroup/bos-tg01/1a6c04708aefa39f",
            "target_id": "i-0fdd40442d7a14a98"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.bos_instance_profile01",
            "aws_iam_role.bos_ec2_role01",
            "aws_instance.bos_ec201_private_bonus",
            "aws_lb_target_group.bos_tg01",
            "aws_security_group.bos_ec2_sg01",
            "aws_subnet.bos_private_subnets",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "bos_nat01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c98642a920b55d18",
            "association_id": "eipassoc-07f785faf76392e91",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-07933669509d73326",
            "network_interface_id": "eni-08a63f9f4f336ac6c",
            "private_ip": "10.26.1.206",
            "public_ip": "54.156.97.80",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c85a0a825cfcc834",
            "tags": {
              "Name": "bos-nat01"
            },
            "tags_all": {
              "Name": "bos-nat01"
            },
            "vpc_id": "vpc-0f4559f19f5d9e577"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.bos_nat_eip01",
            "aws_internet_gateway.bos_igw01",
            "aws_subnet.bos_public_subnets",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "bos_private_default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0457df42dff2219a61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-07933669509d73326",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0457df42dff2219a6",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "460480222158",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-0457df42dff2219a6"
          },
          "dependencies": [
            "aws_eip.bos_nat_eip01",
            "aws_internet_gateway.bos_igw01",
            "aws_nat_gateway.bos_nat01",
            "aws_route_table.bos_private_rt01",
            "aws_subnet.bos_public_subnets",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "bos_public_default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05ad035f02aa40c17",
            "id": "r-rtb-079f6f11a73bc167e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-079f6f11a73bc167e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "460480222158",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-079f6f11a73bc167e"
          },
          "dependencies": [
            "aws_internet_gateway.bos_igw01",
            "aws_route_table.bos_public_rt01",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "bos_private_rt01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:460480222158:route-table/rtb-0457df42dff2219a6",
            "id": "rtb-0457df42dff2219a6",
            "owner_id": "460480222158",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07933669509d73326",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "bos-private-rt01"
            },
            "tags_all": {
              "Name": "bos-private-rt01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4559f19f5d9e577"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "460480222158",
            "id": "rtb-0457df42dff2219a6",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "bos_public_rt01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:460480222158:route-table/rtb-079f6f11a73bc167e",
            "id": "rtb-079f6f11a73bc167e",
            "owner_id": "460480222158",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05ad035f02aa40c17",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "bos-public-rt01"
            },
            "tags_all": {
              "Name": "bos-public-rt01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4559f19f5d9e577"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "460480222158",
            "id": "rtb-079f6f11a73bc167e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "bos_private_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c41a2f8dae8b09c9",
            "region": "us-east-1",
            "route_table_id": "rtb-0457df42dff2219a6",
            "subnet_id": "subnet-03e1fadc0b711957a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.bos_private_rt01",
            "aws_subnet.bos_private_subnets",
            "aws_vpc.bos_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bfbdaf0dc3202aaa",
            "region": "us-east-1",
            "route_table_id": "rtb-0457df42dff2219a6",
            "subnet_id": "subnet-0200c1a7cb256ed3c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.bos_private_rt01",
            "aws_subnet.bos_private_subnets",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "bos_public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c3d58875f184e1f6",
            "region": "us-east-1",
            "route_table_id": "rtb-079f6f11a73bc167e",
            "subnet_id": "subnet-0c85a0a825cfcc834"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.bos_public_rt01",
            "aws_subnet.bos_public_subnets",
            "aws_vpc.bos_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05806aa1704263d53",
            "region": "us-east-1",
            "route_table_id": "rtb-079f6f11a73bc167e",
            "subnet_id": "subnet-050d58a4f5d869c4d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.bos_public_rt01",
            "aws_subnet.bos_public_subnets",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bos_alb_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:460480222158:security-group/sg-08b0c802102379a49",
            "description": "ALB security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08b0c802102379a49",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "bos-alb-sg01",
            "name_prefix": "",
            "owner_id": "460480222158",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bos-alb-sg01"
            },
            "tags_all": {
              "Name": "bos-alb-sg01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4559f19f5d9e577"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "460480222158",
            "id": "sg-08b0c802102379a49",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bos_ec2_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:460480222158:security-group/sg-0d65a3013e76a91d2",
            "description": "EC2 app security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d65a3013e76a91d2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08b0c802102379a49"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "bos-ec2-sg01",
            "name_prefix": "",
            "owner_id": "460480222158",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bos-ec2-sg01"
            },
            "tags_all": {
              "Name": "bos-ec2-sg01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4559f19f5d9e577"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "460480222158",
            "id": "sg-0d65a3013e76a91d2",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bos_rds_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:460480222158:security-group/sg-00a2c4cac16817000",
            "description": "RDS security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00a2c4cac16817000",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow MySQL access only from app tier EC2 instances",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d65a3013e76a91d2"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "bos-rds-sg01",
            "name_prefix": "",
            "owner_id": "460480222158",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bos-rds-sg01"
            },
            "tags_all": {
              "Name": "bos-rds-sg01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4559f19f5d9e577"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "460480222158",
            "id": "sg-00a2c4cac16817000",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bos_vpce_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:460480222158:security-group/sg-0c7af62d8ddbc88a7",
            "description": "SG for VPC Interface Endpoints",
            "egress": [],
            "id": "sg-0c7af62d8ddbc88a7",
            "ingress": [],
            "name": "bos-vpce-sg01",
            "name_prefix": "",
            "owner_id": "460480222158",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bos-vpce-sg01"
            },
            "tags_all": {
              "Name": "bos-vpce-sg01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4559f19f5d9e577"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "460480222158",
            "id": "sg-0c7af62d8ddbc88a7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bos_ec2_ingress_from_alb01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-2261074791",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0d65a3013e76a91d2",
            "security_group_rule_id": "sgr-07cfe9582c2380c34",
            "self": false,
            "source_security_group_id": "sg-08b0c802102379a49",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bos_alb_sg01",
            "aws_security_group.bos_ec2_sg01",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "bos_private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:460480222158:subnet/subnet-03e1fadc0b711957a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.26.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03e1fadc0b711957a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "460480222158",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "bos-private-subnet01"
            },
            "tags_all": {
              "Name": "bos-private-subnet01"
            },
            "vpc_id": "vpc-0f4559f19f5d9e577"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "460480222158",
            "id": "subnet-03e1fadc0b711957a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.bos_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:460480222158:subnet/subnet-0200c1a7cb256ed3c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.26.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0200c1a7cb256ed3c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "460480222158",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "bos-private-subnet02"
            },
            "tags_all": {
              "Name": "bos-private-subnet02"
            },
            "vpc_id": "vpc-0f4559f19f5d9e577"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "460480222158",
            "id": "subnet-0200c1a7cb256ed3c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "bos_public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:460480222158:subnet/subnet-0c85a0a825cfcc834",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.26.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c85a0a825cfcc834",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "460480222158",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "bos-public-subnet01"
            },
            "tags_all": {
              "Name": "bos-public-subnet01"
            },
            "vpc_id": "vpc-0f4559f19f5d9e577"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "460480222158",
            "id": "subnet-0c85a0a825cfcc834",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.bos_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:460480222158:subnet/subnet-050d58a4f5d869c4d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.26.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-050d58a4f5d869c4d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "460480222158",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "bos-public-subnet02"
            },
            "tags_all": {
              "Name": "bos-public-subnet02"
            },
            "vpc_id": "vpc-0f4559f19f5d9e577"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "460480222158",
            "id": "subnet-050d58a4f5d869c4d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "bos_vpc01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:460480222158:vpc/vpc-0f4559f19f5d9e577",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.26.0.0/16",
            "default_network_acl_id": "acl-09e26f437c9d036c9",
            "default_route_table_id": "rtb-0d37cb3206e8e862d",
            "default_security_group_id": "sg-04471ac2a77323d9e",
            "dhcp_options_id": "dopt-009f1520b68d1b543",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f4559f19f5d9e577",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d37cb3206e8e862d",
            "owner_id": "460480222158",
            "region": "us-east-1",
            "tags": {
              "Name": "bos-vpc01"
            },
            "tags_all": {
              "Name": "bos-vpc01"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "460480222158",
            "id": "vpc-0f4559f19f5d9e577",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "bos_vpce_ec2messages01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:460480222158:vpc-endpoint/vpce-05be980383ee7fa1d",
            "dns_entry": [
              {
                "dns_name": "vpce-05be980383ee7fa1d-4mrzcmyw.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-05be980383ee7fa1d-4mrzcmyw-us-east-1b.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-05be980383ee7fa1d-4mrzcmyw-us-east-1a.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ec2messages.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z01705913FYHOPTGDU7SP"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-05be980383ee7fa1d",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0554f793def904cd9",
              "eni-06456d85318ac5dbd"
            ],
            "owner_id": "460480222158",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0c7af62d8ddbc88a7"
            ],
            "service_name": "com.amazonaws.us-east-1.ec2messages",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.26.101.127",
                "subnet_id": "subnet-03e1fadc0b711957a"
              },
              {
                "ipv4": "10.26.102.175",
                "subnet_id": "subnet-0200c1a7cb256ed3c"
              }
            ],
            "subnet_ids": [
              "subnet-0200c1a7cb256ed3c",
              "subnet-03e1fadc0b711957a"
            ],
            "tags": {
              "Name": "bos-vpce-ec2messages01"
            },
            "tags_all": {
              "Name": "bos-vpce-ec2messages01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0f4559f19f5d9e577"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "460480222158",
            "id": "vpce-05be980383ee7fa1d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bos_vpce_sg01",
            "aws_subnet.bos_private_subnets",
            "aws_vpc.bos_vpc01",
            "data.aws_region.bos_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "bos_vpce_kms01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:460480222158:vpc-endpoint/vpce-026542150f78ebc65",
            "dns_entry": [
              {
                "dns_name": "vpce-026542150f78ebc65-yts6k317.kms.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-026542150f78ebc65-yts6k317-us-east-1b.kms.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-026542150f78ebc65-yts6k317-us-east-1a.kms.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "kms.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z03493792SOZNTS2CUPZR"
              },
              {
                "dns_name": "kms.us-east-1.api.aws",
                "hosted_zone_id": "Z09809412V9E6VFMGID74"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-026542150f78ebc65",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0527f4e3ff3a5df80",
              "eni-05ceae267dcd50dfe"
            ],
            "owner_id": "460480222158",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0c7af62d8ddbc88a7"
            ],
            "service_name": "com.amazonaws.us-east-1.kms",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.26.101.5",
                "subnet_id": "subnet-03e1fadc0b711957a"
              },
              {
                "ipv4": "10.26.102.196",
                "subnet_id": "subnet-0200c1a7cb256ed3c"
              }
            ],
            "subnet_ids": [
              "subnet-0200c1a7cb256ed3c",
              "subnet-03e1fadc0b711957a"
            ],
            "tags": {
              "Name": "bos-vpce-kms01"
            },
            "tags_all": {
              "Name": "bos-vpce-kms01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0f4559f19f5d9e577"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "460480222158",
            "id": "vpce-026542150f78ebc65",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bos_vpce_sg01",
            "aws_subnet.bos_private_subnets",
            "aws_vpc.bos_vpc01",
            "data.aws_region.bos_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "bos_vpce_logs01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:460480222158:vpc-endpoint/vpce-0ad2a00d6e3d7e30d",
            "dns_entry": [
              {
                "dns_name": "vpce-0ad2a00d6e3d7e30d-27srdq8t.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0ad2a00d6e3d7e30d-27srdq8t-us-east-1a.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0ad2a00d6e3d7e30d-27srdq8t-us-east-1b.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z03452142FOZF7RHPDOW8"
              },
              {
                "dns_name": "streaming-logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z03452013F5OIK4FF56BP"
              },
              {
                "dns_name": "streaming-logs.us-east-1.api.aws",
                "hosted_zone_id": "Z09799109R4MR0ENP9K0"
              },
              {
                "dns_name": "logs.us-east-1.api.aws",
                "hosted_zone_id": "Z03500533NHEKTZPE9T4S"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0ad2a00d6e3d7e30d",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0320785335effb847",
              "eni-0d6beea2004f4ded6"
            ],
            "owner_id": "460480222158",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0c7af62d8ddbc88a7"
            ],
            "service_name": "com.amazonaws.us-east-1.logs",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.26.101.208",
                "subnet_id": "subnet-03e1fadc0b711957a"
              },
              {
                "ipv4": "10.26.102.42",
                "subnet_id": "subnet-0200c1a7cb256ed3c"
              }
            ],
            "subnet_ids": [
              "subnet-0200c1a7cb256ed3c",
              "subnet-03e1fadc0b711957a"
            ],
            "tags": {
              "Name": "bos-vpce-logs01"
            },
            "tags_all": {
              "Name": "bos-vpce-logs01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0f4559f19f5d9e577"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "460480222158",
            "id": "vpce-0ad2a00d6e3d7e30d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bos_vpce_sg01",
            "aws_subnet.bos_private_subnets",
            "aws_vpc.bos_vpc01",
            "data.aws_region.bos_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "bos_vpce_s3_gw01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:460480222158:vpc-endpoint/vpce-059b868c6c952604c",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-059b868c6c952604c",
            "ip_address_type": "ipv4",
            "owner_id": "460480222158",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "region": "us-east-1",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0457df42dff2219a6"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "service_region": "us-east-1",
            "state": "available",
            "tags": {
              "Name": "bos-vpce-s3-gw01"
            },
            "tags_all": {
              "Name": "bos-vpce-s3-gw01"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0f4559f19f5d9e577"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "460480222158",
            "id": "vpce-059b868c6c952604c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_route_table.bos_private_rt01",
            "aws_vpc.bos_vpc01",
            "data.aws_region.bos_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "bos_vpce_secrets01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:460480222158:vpc-endpoint/vpce-039f677732402d5ca",
            "dns_entry": [
              {
                "dns_name": "vpce-039f677732402d5ca-vblvd6kg.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-039f677732402d5ca-vblvd6kg-us-east-1b.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-039f677732402d5ca-vblvd6kg-us-east-1a.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "secretsmanager.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0980870386B6Q3QLL5X"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-039f677732402d5ca",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-03dab2ecc1f2e2a4e",
              "eni-079f85fc5f627e03f"
            ],
            "owner_id": "460480222158",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0c7af62d8ddbc88a7"
            ],
            "service_name": "com.amazonaws.us-east-1.secretsmanager",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.26.101.137",
                "subnet_id": "subnet-03e1fadc0b711957a"
              },
              {
                "ipv4": "10.26.102.204",
                "subnet_id": "subnet-0200c1a7cb256ed3c"
              }
            ],
            "subnet_ids": [
              "subnet-0200c1a7cb256ed3c",
              "subnet-03e1fadc0b711957a"
            ],
            "tags": {
              "Name": "bos-vpce-secrets01"
            },
            "tags_all": {
              "Name": "bos-vpce-secrets01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0f4559f19f5d9e577"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "460480222158",
            "id": "vpce-039f677732402d5ca",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bos_vpce_sg01",
            "aws_subnet.bos_private_subnets",
            "aws_vpc.bos_vpc01",
            "data.aws_region.bos_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "bos_vpce_ssm01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:460480222158:vpc-endpoint/vpce-0cfd5acdf366dfa31",
            "dns_entry": [
              {
                "dns_name": "vpce-0cfd5acdf366dfa31-my176rlx.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0cfd5acdf366dfa31-my176rlx-us-east-1a.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0cfd5acdf366dfa31-my176rlx-us-east-1b.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ssm.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z03492801XMN8TS5UEWY9"
              },
              {
                "dns_name": "ssm.us-east-1.api.aws",
                "hosted_zone_id": "Z03501671X9AGZVDM11UI"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0cfd5acdf366dfa31",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-05914871e5d35f4e0",
              "eni-0a062b447420b698a"
            ],
            "owner_id": "460480222158",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0c7af62d8ddbc88a7"
            ],
            "service_name": "com.amazonaws.us-east-1.ssm",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.26.101.98",
                "subnet_id": "subnet-03e1fadc0b711957a"
              },
              {
                "ipv4": "10.26.102.125",
                "subnet_id": "subnet-0200c1a7cb256ed3c"
              }
            ],
            "subnet_ids": [
              "subnet-0200c1a7cb256ed3c",
              "subnet-03e1fadc0b711957a"
            ],
            "tags": {
              "Name": "bos-vpce-ssm01"
            },
            "tags_all": {
              "Name": "bos-vpce-ssm01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0f4559f19f5d9e577"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "460480222158",
            "id": "vpce-0cfd5acdf366dfa31",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bos_vpce_sg01",
            "aws_subnet.bos_private_subnets",
            "aws_vpc.bos_vpc01",
            "data.aws_region.bos_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "bos_vpce_ssmmessages01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:460480222158:vpc-endpoint/vpce-0dcbb5b8febd6013e",
            "dns_entry": [
              {
                "dns_name": "vpce-0dcbb5b8febd6013e-pbqtmd8d.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0dcbb5b8febd6013e-pbqtmd8d-us-east-1b.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0dcbb5b8febd6013e-pbqtmd8d-us-east-1a.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ssmmessages.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z01698891WBW6W4XG0512"
              },
              {
                "dns_name": "ssmmessages.us-east-1.api.aws",
                "hosted_zone_id": "Z0818259NODHODY1XLHB"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0dcbb5b8febd6013e",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-05f763a3807416acd",
              "eni-08eeac8ce46aace81"
            ],
            "owner_id": "460480222158",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0c7af62d8ddbc88a7"
            ],
            "service_name": "com.amazonaws.us-east-1.ssmmessages",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.26.101.123",
                "subnet_id": "subnet-03e1fadc0b711957a"
              },
              {
                "ipv4": "10.26.102.220",
                "subnet_id": "subnet-0200c1a7cb256ed3c"
              }
            ],
            "subnet_ids": [
              "subnet-0200c1a7cb256ed3c",
              "subnet-03e1fadc0b711957a"
            ],
            "tags": {
              "Name": "bos-vpce-ssmmessages01"
            },
            "tags_all": {
              "Name": "bos-vpce-ssmmessages01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0f4559f19f5d9e577"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "460480222158",
            "id": "vpce-0dcbb5b8febd6013e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bos_vpce_sg01",
            "aws_subnet.bos_private_subnets",
            "aws_vpc.bos_vpc01",
            "data.aws_region.bos_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "bos_alb_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:460480222158:security-group-rule/sgr-0ad50dd64993e9dd9",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all outbound traffic",
            "from_port": null,
            "id": "sgr-0ad50dd64993e9dd9",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-08b0c802102379a49",
            "security_group_rule_id": "sgr-0ad50dd64993e9dd9",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "460480222158",
            "id": "sgr-0ad50dd64993e9dd9",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bos_alb_sg01",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "ec2_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:460480222158:security-group-rule/sgr-055ecc5c132176fad",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-055ecc5c132176fad",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0d65a3013e76a91d2",
            "security_group_rule_id": "sgr-055ecc5c132176fad",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "460480222158",
            "id": "sgr-055ecc5c132176fad",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bos_ec2_sg01",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "rds_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:460480222158:security-group-rule/sgr-09c7248bc44851332",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all outbound traffic",
            "from_port": null,
            "id": "sgr-09c7248bc44851332",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-00a2c4cac16817000",
            "security_group_rule_id": "sgr-09c7248bc44851332",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "460480222158",
            "id": "sgr-09c7248bc44851332",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bos_rds_sg01",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "bos_alb_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:460480222158:security-group-rule/sgr-0c59b06d3f4b6d06b",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0c59b06d3f4b6d06b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-08b0c802102379a49",
            "security_group_rule_id": "sgr-0c59b06d3f4b6d06b",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "460480222158",
            "id": "sgr-0c59b06d3f4b6d06b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bos_alb_sg01",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "bos_ec2_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:460480222158:security-group-rule/sgr-019c8ca5468617b77",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-019c8ca5468617b77",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0d65a3013e76a91d2",
            "security_group_rule_id": "sgr-019c8ca5468617b77",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "460480222158",
            "id": "sgr-019c8ca5468617b77",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bos_ec2_sg01",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "bos_rds_mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:460480222158:security-group-rule/sgr-000a440c9549624b0",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow MySQL access only from app tier EC2 instances",
            "from_port": 3306,
            "id": "sgr-000a440c9549624b0",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0d65a3013e76a91d2",
            "region": "us-east-1",
            "security_group_id": "sg-00a2c4cac16817000",
            "security_group_rule_id": "sgr-000a440c9549624b0",
            "tags": null,
            "tags_all": {},
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "460480222158",
            "id": "sgr-000a440c9549624b0",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bos_ec2_sg01",
            "aws_security_group.bos_rds_sg01",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    }
  ]
}